# LorEngine

./: .gitmodules  CMakeLists.txt  README.md
LorEngineCore/: CMakeLists.txt
LorEngineCore/includes/LorEngineCore/: Events.hpp  Shader.hpp  Texture.hpp  Window.hpp  png_loading.hpp  test.hpp
LorEngineCore/src/LorEngineCore/: Events.cpp  Shader.cpp  Texture.cpp  Window.cpp  png_loading.cpp  test.cpp
LorEngineEditor/: CMakeLists.txt
LorEngineEditor/src/: main.cpp
